# streamwright-python

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  NOTICE  README.md  justfile  pyproject.toml
.github/workflows/: integration.yml  release.yml  test.yml
docs/: ROADMAP.md
examples/: streaming_fanout.py
examples/smoke/: anthropic_smoke.py  moonshot_smoke.py  openai_smoke.py  run_all.py
streamwright/: __init__.py  context.py  pipeline.py  scheduler.py  types.py
streamwright/providers/: __init__.py  _json_array.py  _sse.py  anthropic.py  base.py  capabilities.py  errors.py  moonshot.py  openai.py
tests/: conftest.py  test_context.py  test_package.py  test_pipeline.py  test_scheduler.py
tests/integration/: conftest.py  test_pipeline_live.py  test_providers_live.py
tests/providers/: __init__.py  test_anthropic.py  test_base_provider.py  test_capabilities.py  test_json_array_parser.py  test_moonshot.py  test_openai.py  test_registry.py  test_sse.py
